<resources>
    <string name="app_name">Food Diary</string>
    <string name="emotion_list_view_title">Emotions</string>
    <string name="action_settings">Settings</string>
    <string name="action_emotions_list">Emotions</string>
    <string name="title_activity_emotion_list">Emotions List</string>
    <string name="happy_emotion_default">Happy</string>
    <string name="angry_emotion_default">Angry</string>
    <string name="annoyed_emotion_default">Annoyed</string>
    <string name="sick_emotion_default">Sick</string>
    <string name="disgust_emotion_default">Disgust</string>
    <string name="happy_emotion_emoticon_default" translatable="false">😁</string>
    <string name="angry_emotion_emoticon_default" translatable="false">😡</string>
    <string name="annoyed_emotion_emoticon_default" translatable="false">😒</string>
    <string name="sick_emotion_emoticon_default" translatable="false">🤕</string>
    <string name="disgust_emotion_emoticon_default" translatable="false">🤢</string>
    <string name="label_for_emotion_emoticon">Emoticon</string>
    <string name="placeholder_for_emotion_emoticons">Insert an emoticon for emotion</string>
    <string name="label_for_emotion_name">Name</string>
    <string name="placeholder_for_emotion_name">Insert a name for this emotion</string>
    <string name="label_for_meal_edit_name">Meal name</string>
    <string name="placeholder_insert_meal_name">Which meal was?</string>
    <string name="label_for_meal_emotion">Meal emotion</string>
    <string name="placeholder_for_insert_meal_emotion">Which was your emotion after the meal?</string>
    <string name="manage_emotions_button">Manage emotions</string>
    <string name="label_for_meal_date">Meal date</string>
    <string name="label_for_meal_dishes">Meal dishes</string>
    <string name="add_dish_button">Add dish</string>
    <string name="add_dish_dialog_title">Add dish</string>
    <string name="delete_dish_button">Delete dish</string>
    <string name="confirm_delete_dish">Confirm dish deletion</string>
    <string name="confirm_delete_dish_button">Confirm</string>
    <string name="meal_added_succesfully">Meal added</string>
    <string name="error_adding_meal">Error adding meal</string>
    <string name="dish_deleted">Dish deleted</string>
    <string name="dish_deleting_error">Error deleting dish</string>
    <string name="dish_added">Dish added</string>
    <string name="dish_add_error">Error adding dish</string>
    <string name="meal_delete_button">Delete Meal</string>
    <string name="delete_meal_dialog_title">Confirm meal deletion</string>
    <string name="confirm_meal_deletion_message">Confirm the meal deletion?</string>
    <string name="delete_emotion">Delete emotion</string>
    <string name="delete_emotion_dialog_title">Confirm emotion deletion</string>
    <string name="confirm_emotion_deletion_message">Are you sure to delete this emotion?</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="export_meals">Esporta diario</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="NN_MU">NN</string>
    <string name="PZ_MU">pz</string>
    <string name="ML_MU">ml</string>
    <string name="GR_MU">gr</string>
    <string name="add_dish_quantity">Quantity</string>
    <string name="add_dish_name">Name</string>
    <string name="measure_unit">Measure Unit</string>
    <string name="title_activity_measure_unit_management">Measure Unit Management</string>
    <string name="measureunitname">Measure unit</string>
    <string name="done_button_menu_item">Done</string>
    <string name="cancel_button_menu_item">Cancel</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="add_measure_unit_dialog">Add measure unit</string>
    <string name="edit_measure_unit_dialog">Edit measure unit</string>
    <string name="add_measure_unit_edit_name">Insert measure unit description</string>
    <string name="mu_icon">MU</string>
</resources>
